    (*20: 2 words descriptor + 3 words content*)
  val b = ML_Heap.sizeof [s, s];
    (*20: shared values without list structure*)
  val c = ML_Heap.sizeof1 [s, s];
    (*44 = 20 + 24: shared values + 2 * 3 words per list cons*)

* Operations for Zstd compression (via Isabelle/Scala):

  Zstd.compress: Bytes.T -> Bytes.T
  Zstd.uncompress: Bytes.T -> Bytes.T


*** System ***

* Remote SSH host of "isabelle hg_sync" and "isabelle sync" now works
via options -s, -p, -u. The TARGET argument is a plain file-system path
in Isabelle notation, no longer an rsync target (host:directory). Minor
INCOMPATIBILITY of command-line syntax.

* System option "build_through" determines if session builds should
observe dependency of options that contribute to the formal content.
This is specified via option tags given in etc/options (e.g. see
"isabelle options -l -t content,document"). A change of such options
causes a fresh build. For example:

  isabelle build FOL
  isabelle build -o show_types FOL  # unchanged, no depency on options
  isabelle build -o build_thorough -o show_types FOL  # changed
  isabelle build -o build_thorough FOL  # changed

* The command-line tool "isabelle update" is now directly based on
"isabelle build" instead of "isabelle dump". Thus it has become more
scalable, and supports most options from "isabelle build". Partial
builds are supported as well, e.g. "isabelle update -n -a".

* The command-line tool "isabelle log" has been renamed to "isabelle
build_log", to emphasize its relation to "isabelle build".

* The command-line tool "isabelle build_docker" has been renamed to
"isabelle docker_build", to emphasize its non-relation to "isabelle
build".

* System option "build_pide_reports" has been discontinued: it coincides
with "pide_reports".

* System option "ML_process_policy" has been renamed to
"process_policy", as it may affect other processes as well (notably in
"isabelle build").

* Isabelle/Scala provides generic support for XZ and Zstd compression,